Fixed Permission on static maps, layers, and interactive maps. Change the default view of detail information on static maps, layers, and interactive maps (non truncate characters).

--- a/geonode/static/v2/css/custom.css
+++ b/geonode/static/v2/css/custom.css
@@ -833,6 +833,7 @@ input[type="search"]:focus{
 /*Chart*/
 .ch-size, .ch-size-fforecast, .ch-size-pie{
     height: 370px;
+    width: auto;
 }
 
 .ch-size-pie-mercalli{
@@ -852,6 +853,32 @@ html[dir=rtl] .ch-size canvas, html[dir=rtl] .ch-size-fforecast, html[dir=rtl] .
 /*.ch-size-pie{
     height: 350px;
 }*/
+
+/*Leaflet Maps*/
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
 
 /*Section*/
 
@@ -2272,7 +2299,7 @@ nav .navbar-upper .dropdown-menu:before
 .affix {
   top: 70px;
   width:100%;
-  z-index: 4;
+  z-index: 1001;
 }
 
 /*.container-search{
@@ -2689,6 +2716,17 @@ html[dir=rtl] .item .carousel-caption{
     padding-right: 0px;
     padding-left: 5px;
 }*/
+
+/*Map in Dashboard*/
+.legend span, .legend label {
+  display: block;
+  width: 50px;
+  height: 18px;
+  float: left;
+  opacity: 0.7;
+  text-align: center;
+  font-size: 80%
+}
 
 /*Section Data Provider and Partners*/
 
@@ -4327,7 +4365,7 @@ html[dir=rtl] .product-details-side{
 
 .product-info-panel .tab-content {
   min-height: 565px;
-  padding: 15px;
+  padding: 15px 15px 45px;
 }
 
 .product-info-panel .table tr{
@@ -4406,7 +4444,7 @@ html[dir=rtl] .product-details-side{
 }
 
 .hid-row{
-  display: none;
+  /*display: none;*/ /*make default hidden*/
  }
 
 .btn-toggle.expand .sign:after{
